--- a/index.html
+++ b/index.html
@@ -2,10 +2,109 @@
 <html>
 
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/img/favicon.ico">
+
     <title> BernardTheCreators Site </title>
+
+    <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
 </head>
 
 <body>
+
+    <header>
+
+    </header>
+
+    <!--    Hero Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Opt In Section   -->
+
+    <section>
+
+    </section>
+
+    <!--    Boost Your Income Section   -->
+
+    <section>
+
+    </section>
+
+    <!--    Who Benefits Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Course Features Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Project Features Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Video Featurette Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Instructor Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Testimonials Section   -->
+
+    <section>
+
+    </section>
+
+    <!--    Sign Up Section   -->
+
+    <section>
+
+
+    </section>
+
+    <!--    Footer   -->
+
+    <footer>
+
+
+    </footer>
+
+    <!--    Modal Section   -->
+
+    <div>
+
+    </div>
+
 
 </body>
 
