--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 
     </div>
 
+    <!--    Bootstrap Core Javascript   -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
